<resources>
    <string name="app_name">Matchmaking</string>
    <string name="login">Login</string>
    <string name="email">email</string>
    <string name="password">password</string>
    <string name="login_title">Matchmaking</string>
    <string name="preference_file_key">preferences-file-matchmaking</string>
    <string name="invalid_email">Email inválido</string>
    <string name="please_enter_a_password">Por favor coloque una contraseña</string>
    <string name="server_error_message">Error de conexión con el servidor. Por favor intente de nuevo.</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="credential_error">Check your credentials</string>
    <string name="options">Options</string>
    <string name="logout">Logout</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="nav_header_title">Matchmaking</string>
    <string name="nav_header_subtitle">Menu</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="amigos">Amigos</string>
    <string name="mis_equipos">Mis Equipos</string>
    <string name="mis_matches">Mis Matches Individual</string>
    <string name="mis_matches_team">Mis Matches Equipo</string>
    <string name="crear_match">Crear Match</string>
    <string name="crear_equipo">Crear Equipo</string>
    <string name="buscar_match">Buscar Match</string>
    <string name="anadir_amigo">Añadir Amigo</string>
    <string name="transferir">Transferir Créditos</string>
    <string name="edit_profile">Editar Perfil</string>
    <string name="perfil">Perfil</string>
    <string name="creditos">Créditos</string>
    <string name="num_amigos">Amigos</string>
    <string name="num_equipos">Equipos</string>
    <string name="activity_title">Crear Actividad</string>
    <string name="activity_input">Ingrese la actividad</string>
    <string name="actvitity_description">Descripcion</string>
    <string name="actvitity_location">Ubicacion</string>
    <string name="actvitity_next">SIGUIENTE</string>
    <string name="actvitity_confirm">CONFIRMAR ACTIVIDAD</string>
    <string name="actvitity_bet">¿Agregar suscripción?</string>
    <string name="activity_team">Agregar Equipo</string>
    <string name="activity_individual">Individual</string>
    <string name="activity_participants">Participantes</string>
    <string name="activity_details">Detalles</string>
    <string name="activity_back">Atras</string>
    <string name="activity_amount">Tarifa de suscripción</string>
    <string name="activity_date">Fecha yyyy-MM-dd</string>
    <string name="activity_time">Hora HH:mm</string>
    <string name="activity_player">Retador</string>
    <string name="activity_label">Actividad</string>
    <string name="activity_time_label">Hora</string>
    <string name="actvitiy_date_label">Fecha</string>
    <string name="actvitiy_location">Lugar</string>
    <string name="actvitiy_bet_label">Apuesta</string>
    <string name="actvitiy_value">activity</string>
    <string name="actvitiy_time_value">time</string>
    <string name="actvitiy_date_value">date</string>
    <string name="actvitiy_location_value">location</string>
    <string name="actvitiy_bet_value">No realiza apuesta</string>
    <string name="editar_perfil">Modificar Datos</string>
    <string name="actualizar">Actualizar</string>
    <string name="nombre">Nombre</string>
    <string name="campo_vacio">Campo vacío</string>
</resources>
