<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.menu.fragment.AmigosFragment">

    <ScrollView
        android:id="@+id/scroll"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="1dp"
        android:layout_marginLeft="1dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="1dp"
        android:layout_marginRight="1dp"
        android:layout_marginBottom="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.48"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.52">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <TextView
                android:id="@+id/activity_title"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_marginTop="20dp"
                android:text="@string/activity_title"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/Input_Activity"
                android:layout_width="0dp"
                android:layout_height="36dp"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="45dp"
                android:layout_marginEnd="10dp"
                android:layout_marginRight="10dp"
                android:ems="10"
                android:hint="@string/activity_input"
                android:inputType="textPersonName"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                app:layout_constraintEnd_toStartOf="@+id/Date"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/activity_title" />

            <EditText
                android:id="@+id/Time"
                android:layout_width="0dp"
                android:layout_height="36dp"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="28dp"
                android:layout_marginEnd="10dp"
                android:layout_marginRight="10dp"
                android:ems="10"
                android:hint="@string/activity_time"
                android:inputType="time"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@+id/Description"
                app:layout_constraintTop_toBottomOf="@+id/Date" />

            <EditText
                android:id="@+id/Description"
                android:layout_width="0dp"
                android:layout_height="36dp"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="28dp"
                android:layout_marginEnd="10dp"
                android:layout_marginRight="10dp"
                android:ems="10"
                android:hint="@string/actvitity_description"
                android:inputType="textPersonName"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                app:layout_constraintEnd_toStartOf="@+id/Time"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/Input_Activity" />

            <EditText
                android:id="@+id/Date"
                android:layout_width="0dp"
                android:layout_height="36dp"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="45dp"
                android:layout_marginEnd="10dp"
                android:layout_marginRight="10dp"
                android:ems="10"
                android:hint="@string/activity_date"
                android:inputType="date"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/Input_Activity"
                app:layout_constraintTop_toBottomOf="@+id/activity_title" />

            <EditText
                android:id="@+id/Location"
                android:layout_width="0dp"
                android:layout_height="36dp"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="28dp"
                android:layout_marginEnd="10dp"
                android:layout_marginRight="10dp"
                android:ems="10"
                android:hint="@string/actvitity_location"
                android:inputType="textPersonName"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                app:layout_constraintEnd_toStartOf="@+id/checkbox"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/Description" />

            <CheckBox
                android:id="@+id/checkbox"
                android:layout_width="0dp"
                android:layout_height="36dp"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="28dp"
                android:layout_marginEnd="10dp"
                android:layout_marginRight="10dp"
                android:text="@string/actvitity_bet"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/Location"
                app:layout_constraintTop_toBottomOf="@+id/Time" />

            <EditText
                android:id="@+id/suscription"
                android:layout_width="wrap_content"
                android:layout_height="43dp"
                android:layout_marginTop="28dp"
                android:ems="10"
                android:hint="@string/activity_amount"
                android:inputType="numberSigned"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.545"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/Location" />


            <CheckBox
                android:id="@+id/checkIndividual"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="40dp"
                android:layout_marginEnd="36dp"
                android:layout_marginRight="36dp"
                android:text="@string/activity_individual"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.994"
                app:layout_constraintStart_toEndOf="@+id/checkGrupal"
                app:layout_constraintTop_toBottomOf="@+id/textView7" />

            <CheckBox
                android:id="@+id/checkGrupal"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="40dp"
                android:layout_marginEnd="20dp"
                android:layout_marginRight="20dp"
                android:text="@string/activity_team"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                app:layout_constraintEnd_toStartOf="@+id/checkIndividual"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView7" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="30dp"
                android:text="@string/activity_participants"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/suscription" />

            <Button
                android:id="@+id/confirmar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="150dp"
                android:background="#71db77"
                android:text="@string/actvitity_confirm"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/checkIndividual" />

            <androidx.core.widget.NestedScrollView
                android:id="@+id/ScrollTeams"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="30dp"
                android:layout_marginRight="30dp"
                android:layout_marginBottom="10dp"
                android:fillViewport="true"
                app:layout_constraintBottom_toTopOf="@+id/confirmar"
                app:layout_constraintEnd_toStartOf="@+id/checkIndividual"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/checkGrupal">

                <LinearLayout
                    android:id="@+id/teams_container"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"/>
            </androidx.core.widget.NestedScrollView>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>